<resources>
    <string name="app_name">FuchsARTig</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="test">Explosionsbox Alice im Wunderland</string>

    <string name="home">Home</string>
    <string name="prokuct">Produkte</string>
    <string name="favorite">Favoriten</string>
    <string name="shopping">Einkaufswagen</string>
    <string name="settings">Einstellungen</string>
    <string name="details">Produkt Details</string>
    <string name="tv_home">Das ist neu</string>
    <string name="mail">E-Mail</string>
    <string name="deliver_to">Lieverung an:</string>
    <string name="article">Artikel:</string>
    <string name="amount">Anzahl:</string>
    <string name="amount_price">Einzelpreis:</string>
    <string name="delivery_adress">Lieferadresse</string>
    <string name="password">Password</string>
    <string name="your_order">Ihre Bestellung</string>
    <string name="name">Vorname/Nachname</string>
    <string name="current_password">Aktuelles Password</string>
    <string name="new_password">Neues Password</string>
    <string name="password_forgot">Password vergessen</string>
    <string name="empty_favorite">keine Favoriten</string>
    <string name="empty_cart">Einkaufswagen ist leer</string>
    <string name="buy_artikel">Zur Kasse gehen (%1$s Artikel)</string>
    <string name="buy_artikel_0">Zur Kasse gehen (0 Artikel)</string>
    <string name="go_shopping">weiter Einkaufen</string>
    <string name="register">Registrieren</string>
    <string name="profile">Profil</string>
    <string name="birthdate">Geburtsdatum</string>
    <string name="log_in">Anmelden</string>
    <string name="Log_out">Abmelden</string>
    <string name="card_date">Gültig bis</string>
    <string name="current_amount">Auf Lager:</string>
    <string name="current_amount_add">Hinzufügen:</string>
    <string name="storage">Auffüllen</string>
    <string name="new_price">Preise</string>
    <string name="new_price_add">Neuer Preis</string>
    <string name="description">Produktbeschreibung</string>

    <string name="personal_data">Persönliche Daten</string>
    <string name="personal_login_data">Log in ändern</string>
    <string name="first_name">Vorname</string>
    <string name="last_name">Nachname</string>
    <string name="street">Straße</string>
    <string name="haus_number">Nr.</string>
    <string name="plz">PLZ</string>
    <string name="city">Stadt</string>
    <string name="country">Land</string>

    <string name="payment">Zahlungsart</string>
    <string name="card_owner">Name auf der Karte</string>
    <string name="card_number">Kartennummer</string>
    <string name="card_check_number">Kartenprüfnummer (CVV)</string>
    <string name="card_owner_copy">Name des Kontoinhabers verwenden</string>
    <string name="bank_owner">Kontoinhaber</string>
    <string name="iban">IBAN</string>
    <string name="bic">BIC (Swift-Code)</string>
    <!--    <string name="payment">Zahlungsart</string>-->


    <string name="btn_login">Einloggen</string>
    <string name="btn_signup">Registrieren</string>
    <string name="btn_visitor">Als Gast starten</string>
    <string name="btn_save">Übernehmen</string>
    <string name="btn_save_card">Karte hinzufügen</string>
    <string name="btn_save_bank">Konto hinzufügen</string>
    <string name="btn_buy_now">Jetzt Kaufen</string>
    <string name="btn_paypal">zu PayPal</string>
    <string name="agb">Mit Ihrer Bestellung erklären Sie sich mit unseren Allgemeinen Geschäftsbedingungen einverstanden. Bitte lesen Sie unsere Datenschutzerklärung und unsere Hinweise zu Cookies.</string>
    <string name="agb_assing">Ich Stimme zu</string>
    <string name="sold_out">Ausverkauft</string>
    <string name="current_price">Sie sind dabei den aktuellen Preis zu ändern!</string>
    <string name="change_price">Sind Sie sich sicher, dass sie den Preis von %1$s auf %2$s ändern wollen?</string>
    <string name="cancel">Abbrechen</string>
    <string name="ok">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    sold_out
</resources>