<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_user"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fuchsartig.ui.user.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_product"
        android:name="com.example.fuchsartig.ui.user.ProductFragment"
        android:label="@string/prokuct"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_navigation_product_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.fuchsartig.ui.user.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_shopping"
        android:name="com.example.fuchsartig.ui.user.ShoppingVentureFragment"
        android:label="@string/shopping"
        tools:layout="@layout/fragment_shopping_venture" >
        <action
            android:id="@+id/action_navigation_shopping_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.fuchsartig.ui.user.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail" />
</navigation>