<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.user.BankingFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_bank_owner"
        style="@style/layout_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_bank_owner"
            style="@style/input_edit_text_text"
            android:hint="@string/bank_owner" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_iban"
        style="@style/layout_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_bank_owner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_iban"
            style="@style/input_edit_text_text"
            android:hint="@string/iban" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_bic"
        style="@style/layout_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_iban">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_bic"
            style="@style/input_edit_text_text"
            android:hint="@string/bic" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save_banking"
        style="@style/btn_user"
        android:text="@string/btn_save_bank"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_bic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>