<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_title"
        style="@style/tv_title"
        android:text="@string/test"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/amount"
        style="@style/tv_title"
        android:layout_marginTop="8dp"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_amount"
        style="@style/tv_title"
        android:text="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/amount"
        app:layout_constraintStart_toEndOf="@id/amount"
        app:layout_constraintTop_toTopOf="@+id/amount" />


    <TextView
        android:id="@+id/price"
        style="@style/tv_title"
        android:text="@string/amount_price"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/amount"
        app:layout_constraintStart_toEndOf="@id/tv_amount"
        app:layout_constraintTop_toTopOf="@+id/amount" />

    <TextView
        android:id="@+id/tv_price"
        style="@style/tv_title"
        android:layout_marginStart="8dp"
        android:text="1"
        app:layout_constraintBottom_toBottomOf="@+id/amount"
        app:layout_constraintStart_toEndOf="@id/price"
        app:layout_constraintTop_toTopOf="@+id/amount" />

    <TextView
        android:id="@+id/tv_total_price"
        style="@style/tv_title"
        android:layout_width="50dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:text="10.95"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_price"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/tv_price" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="24dp"
        android:layout_height="24dp"

        app:layout_constraintBottom_toBottomOf="@+id/tv_total_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_total_price"
        app:srcCompat="@drawable/baseline_euro_24" />
</androidx.constraintlayout.widget.ConstraintLayout>