<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.user.MasterCardFragment">

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_card_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        style="@style/tv_title"
        android:text="@string/card_owner_copy"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_card_owner"
       style="@style/layout_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_card_owner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_card_owner"
            style="@style/input_edit_text_text"
            android:hint="@string/card_owner"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_card_number"
        style="@style/layout_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_card_owner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_card_number"
            style="@style/input_edit_text_number"
            android:hint="@string/card_number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginVertical="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_card_number">

        <View
            android:layout_width="16dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:strokeColor="@color/primary_color"
            app:strokeWidth="2dp">

<!--TODO ggf spinner in edit text umwandeln-->

            <Spinner
                android:id="@+id/spinner_month"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 />

        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            android:layout_gravity="center"
            app:strokeColor="@color/primary_color"
            app:strokeWidth="2dp">

            <Spinner
                android:id="@+id/spinner_year"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" />

        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_width="16dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_card_check_number"
            style="@style/layout_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_card_check_number"
                style="@style/input_edit_text_all"
                android:hint="@string/card_check_number"
               />

        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save_card"
        style="@style/btn_user"
        android:text="@string/btn_save_card"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_card_check_number"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>