<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingVertical="8dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="8dp"
        app:srcCompat="@drawable/produkt_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_title"
        style="@style/tv_title"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/test"
        app:layout_constraintStart_toEndOf="@+id/img_product"
        app:layout_constraintTop_toTopOf="@+id/img_product" />


    <TextView
        android:id="@+id/textView"
        style="@style/tv_title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/current_amount"
        app:layout_constraintStart_toEndOf="@+id/img_product"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/input_amount"
        app:layout_constraintStart_toStartOf="@+id/input_amount"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        style="@style/tv_title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/current_amount_add"
        app:layout_constraintStart_toEndOf="@+id/img_product"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/input_amount"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:inputType="number"
        tools:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/btn_save"
        style="@style/ic_btn"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/input_amount"
        app:layout_constraintStart_toEndOf="@+id/input_amount"
        app:layout_constraintTop_toTopOf="@+id/input_amount"
        app:srcCompat="@drawable/ic_save" />
</androidx.constraintlayout.widget.ConstraintLayout>