<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingVertical="8dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="8dp"
        app:srcCompat="@drawable/produkt_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_title"
        style="@style/tv_title"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:text="@string/test"
        app:layout_constraintStart_toEndOf="@+id/img_product"
        app:layout_constraintTop_toTopOf="@+id/img_product" />

    <TextView
        android:id="@+id/info_price"
        style="@style/tv_title"
        android:text="@string/amount_price"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_price"
        style="@style/tv_title"
        android:layout_width="50dp"
        android:layout_marginStart="20dp"
        android:enabled="false"
        android:gravity="end"
        android:inputType="number"
        android:text="10.95"
        app:layout_constraintBottom_toBottomOf="@+id/info_price"
        app:layout_constraintStart_toEndOf="@+id/info_price"
        app:layout_constraintTop_toTopOf="@+id/info_price" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_price"
        app:layout_constraintStart_toEndOf="@+id/tv_price"
        app:layout_constraintTop_toTopOf="@+id/tv_price"
        app:srcCompat="@drawable/baseline_euro_24" />

    <TextView
        android:id="@+id/textView2"
        style="@style/tv_title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_price_add"
        app:layout_constraintStart_toEndOf="@+id/img_product"
        app:layout_constraintTop_toBottomOf="@+id/info_price" />

    <EditText
        android:id="@+id/input_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:inputType="number"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@id/btn_save"/>

    <ImageButton
        android:id="@+id/btn_save"
        style="@style/ic_btn"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/input_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/input_amount"
        app:layout_constraintTop_toTopOf="@+id/input_price"
        app:srcCompat="@drawable/ic_save" />


</androidx.constraintlayout.widget.ConstraintLayout>